--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* General styles
+﻿/* General styles
  **************************************************/
 @font-face {
 	font-family: 'Lato';
@@ -66,6 +66,28 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 .mobilemenu:hover,.mobilemenu:focus {
 	color: #fff;
 }
+
+/* language bar
+*************************************************************************/
+#header {
+width:100%;
+height:60px;
+background-color:#fefefe;
+}
+
+
+#rightlinks a {
+    float: right;
+    margin-right: 10px;
+    padding: 10px 5px;
+    background-color:#00293C;
+    color: #fefefe;
+}
+#rightlinks a:hover {
+    color: black;
+    background-color: white;
+}
+
 
 /* layout
  **************************************************/
